finished for bioconductor submission
- un-export lenSequences, numSequences, scoreHistogramSingleSeq
- corrected function documentation
- corrected indent
- finished vignette

--- a/vignettes/literature.bib
+++ b/vignettes/literature.bib
@@ -5,13 +5,15 @@
     note = {R package version 4.6.0},
 }
 @Manual{motifdb,
-    title = {MotifDb: An Annotated Collection of Protein-DNA Binding Sequence Motifs},
+    title = {MotifDb: An Annotated Collection of Protein-DNA Binding 
+            Sequence Motifs},
     author = {Paul Shannon},
     year = {2015},
     note = {R package version 1.12.1},
 }
 @article{rahmann,
-    title={On the power of profiles for transcription factor binding site detection},
+    title={On the power of profiles for transcription factor binding 
+            site detection},
     author={Rahmann, Sven and M{\"u}ller, Tobias and Vingron, Martin},
     journal={Statistical Applications in Genetics and Molecular Biology},
     volume={2},
@@ -41,7 +43,8 @@
 }
 @article{zhang,
     title={Computing exact P-values for DNA motifs},
-    author={Zhang, Jing and Jiang, Bo and Li, Ming and Tromp, John and Zhang, Xuegong and Zhang, Michael Q},
+    author={Zhang, Jing and Jiang, Bo and Li, Ming and Tromp, John and Zhang, 
+            Xuegong and Zhang, Michael Q},
     journal={Bioinformatics},
     volume={23},
     number={5},
